--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
-{
-    "files.exclude": {
-        "**/*.freezed.dart": true,
-        "**/*.g.dart": true
-    }
-}
+// {
+//   "files.exclude": {
+//     "**/*.freezed.dart": true,
+//     "**/*.g.dart": true
+//   },
+
+// }
