--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,9 @@ dependencies:
       url: https://github.com/jtans/logger_flutter.git
       ref: master
   intl: ^0.19.0
+  cached_network_image: ^3.3.1
+  percent_indicator: ^4.2.3
+  device_info_plus: ^10.1.0
       
 dev_dependencies:
   flutter_test:
