--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,10 @@ dependencies:
   cached_network_image: ^3.3.1
   percent_indicator: ^4.2.3
   device_info_plus: ^10.1.0
+  firebase_messaging: ^15.0.1
+  firebase_core: ^3.1.0
+  cloud_firestore: ^5.0.1
+  firebase_auth: ^5.1.0
       
 dev_dependencies:
   flutter_test:
