--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,8 @@ dependencies:
   firebase_core: ^3.1.0
   cloud_firestore: ^5.0.1
   firebase_auth: ^5.1.0
+  firebase_database: ^11.0.1
+  uuid: ^4.4.0
       
 dev_dependencies:
   flutter_test:
